--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.2.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
+    "bulma": "^0.6.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "v-toaster": "^1.0.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
