--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bulma": "^0.6.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "helmet": "^3.12.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "v-toaster": "^1.0.3",
